examples/test/testpolicy7961.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy7961
  namespace: namespace124
spec:
  podSelector:
    matchLabels:
      key27: value41
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key15: value36
          key6: value49
          key18: value15
      podSelector:
        matchLabels:
          key39: value20
